desktop php implemented

--- a/public/style/main_mobile.css
+++ b/public/style/main_mobile.css
@@ -4,58 +4,22 @@ body {
 a {
   text-decoration: none; }
 
-.menuContainer {
-  display: flex;
-  justify-content: flex-end;
-  flex-direction: column;
-  position: fixed;
-  top: 50vh;
-  right: 1vw;
-  transform: translateY(-50%);
-  z-index: 10000; }
-
-.menu-item {
-  position: relative;
-  width: 12px;
-  height: 12px;
-  margin-bottom: 1vh;
-  border: 1px solid white;
-  border-radius: 100vw;
-  text-align: right; }
-
-.introLabel {
-  opacity: 0; }
-  .introLabel.visible {
-    width: 5vw;
-    position: absolute;
-    right: 30px;
-    font-family: "Lato", sans-serif;
-    color: #D0A233;
-    margin-top: -0.5vh;
-    opacity: 1;
-    transition: opacity 0.1s ease; }
-
-.scrollTarget {
-  --currentSection: 0;
-  margin-top: calc(-100vh * var(--currentSection));
-  transition: margin-top 0.5s ease;
-  overflow: hidden; }
-
 .introduction {
   width: 100vw;
   height: 100vh;
   text-align: center;
-  position: relative; }
+  position: relative;
+  margin-bottom: 10vh; }
 
 .introductionTitle {
   position: absolute;
-  top: 33vh;
-  left: 32vw; }
+  top: 40vh;
+  left: 25vw; }
 
 .authorName {
   font-family: "Abril Fatface", regular;
   color: white;
-  font-size: 5vw; }
+  font-size: 8vw; }
 
 .typewriter {
   overflow: hidden;
@@ -83,7 +47,7 @@ a {
 .profession {
   font-family: "Abril Fatface", regular;
   color: #D0A233;
-  font-size: 2.5vw;
+  font-size: 4vw;
   animation: professionAppear 1s ease; }
 
 .backgroundImage {
@@ -189,19 +153,16 @@ a {
   left: 87vw; }
 
 .scrollAction {
-  width: 5vw;
-  margin: 0 auto;
-  position: absolute;
-  bottom: 5vh;
-  left: 48vw; }
+  width: 25vw;
+  margin: -10vh auto; }
   .scrollAction .scroll {
     text-transform: uppercase;
     font-family: "Bitter", serif;
-    font-size: 1vw;
+    font-size: 3vw;
     display: inline-block;
     color: white; }
   .scrollAction .scrollImage {
-    width: 1vw; }
+    width: 3vw; }
 
 .projects {
   max-height: 300vh; }
@@ -209,9 +170,9 @@ a {
 .sectionTitleProjects {
   width: 100%;
   text-align: center;
-  padding-bottom: 20vh; }
+  padding-bottom: 10vh; }
   .sectionTitleProjects .sectionImage {
-    width: 5vw;
+    width: 8vw;
     text-align: center;
     animation: rotate-scale-up-diag-1 6s ease infinite; }
 @keyframes rotate-scale-up-diag-1 {
@@ -226,23 +187,13 @@ a {
   .sectionTitleProjects h3 {
     color: white;
     font-family: "Abril Fatface", regular;
-    font-size: 5vw;
+    font-size: 10vw;
     display: inline-block;
     margin-top: 3vh; }
 
-@media (max-width: 400px) {
-  .projects {
-    margin: 15vh; } }
 .videoPlayer {
-  width: 100vw;
-  height: 30vh;
-  object-fit: cover;
-  overflow: hidden;
-  transform: translateY(-10vh);
-  transition: transform 1s ease; }
-
-.visible .videoPlayer {
-  transform: translateY(0); }
+  width: 70vw;
+  height: 30vh; }
 
 .project-1 {
   height: 100vh;
@@ -251,92 +202,81 @@ a {
 
 .rectangle-1 {
   width: 90vw;
-  height: 60vh;
+  height: 45vh;
   background-color: rgba(176, 188, 196, 0.6);
-  position: absolute;
-  top: -10vh;
-  opacity: 0;
-  transition: opacity 1s ease; }
-
-.visible .rectangle-1 {
-  opacity: 1; }
+  margin: 0 auto; }
 
 .video {
-  width: 40vw;
+  width: 80vw;
   position: absolute;
-  top: -13vh;
-  left: 3vw; }
+  top: -10vh;
+  left: 10vw; }
   .video video {
     width: 100%; }
 
 .projectTitle {
   width: 50vw;
   font-family: "Abril Fatface", regular;
-  font-size: 5vw;
+  font-size: 13vw;
   color: #D0A233;
   position: absolute;
-  top: -18vh;
-  left: 65vw;
-  text-shadow: 0 3px 8px #394047;
-  opacity: 0;
-  transform: translateX(5vw);
-  transition: transform 1s ease, opacity 1s ease; }
-
-.visible .projectTitle {
-  transform: translateX(0);
-  opacity: 1; }
+  top: 41vh;
+  left: 15vw;
+  text-shadow: 0 3px 8px #394047; }
 
 .tagsContainer {
   position: absolute;
-  top: 0;
-  left: 45vw; }
+  top: 15vh;
+  left: 20vw;
+  display: flex; }
 
 .tag {
   display: inline-block;
-  width: 7vw;
-  height: 3vh;
+  width: 20vw;
+  height: 2vh;
   background-color: #394047;
   color: white;
   font-family: "Bitter", serif;
-  font-size: 0.9vw;
+  font-size: 2.5vw;
   text-align: center;
   padding-top: 0.5vh;
-  border-radius: 0.3vw;
+  border-radius: 1vw;
   opacity: 0.7;
   margin-right: 1vw; }
 
 .projectParagraph {
   font-family: "Lato", sans-serif;
   font-weight: 300;
-  font-size: 1.2vw;
+  font-size: 3vw;
   color: white;
-  width: 40vw;
+  width: 70vw;
   position: absolute;
-  top: 10vh;
-  left: 45vw;
-  line-height: 5vh; }
+  top: 20vh;
+  left: 20vw;
+  line-height: 3vh; }
 
 .linkContainer {
-  width: 20vw;
+  width: 30vw;
   height: 6vh;
   position: absolute;
-  top: 30vh;
-  left: 15vw;
+  top: 32vh;
+  left: 60vw;
   display: flex;
-  justify-content: space-around; }
+  justify-content: space-between; }
 
 .linkTag {
   font-family: "Bitter", serif;
   color: #394047;
-  font-size: 2vw;
+  font-size: 4vw;
   text-decoration: none;
-  width: 20vw; }
+  width: 20vw;
+  margin-top: 1.5vh; }
 
 .linkTag:hover {
   color: #DCC7A9; }
 
 .linkImage {
-  width: 5vw; }
+  width: 10vw; }
   .linkImage img {
     width: 100%; }
 
@@ -345,12 +285,13 @@ a {
   width: 100vw;
   margin-top: -10vh; }
   .project-2 .projectTitle {
+    width: 70vw;
     font-family: "Abril Fatface", regular;
-    font-size: 5vw;
+    font-size: 13vw;
     color: white;
     position: absolute;
-    left: 20vw;
-    top: -7vh;
+    top: 41vh;
+    left: 10vw;
     text-shadow: 0 3px 8px #394047; }
 
 .projectShowcase {
@@ -361,60 +302,55 @@ a {
 .rectangle-2 {
   background-color: #DCC7A9;
   width: 90vw;
-  height: 60vh;
-  position: absolute;
-  right: 0;
-  opacity: 0;
-  transition: opacity 1s ease; }
-
-.visible .rectangle-2 {
-  opacity: 1; }
+  height: 45vh;
+  margin: 0 auto; }
 
 .video-2 {
-  width: 40vw;
+  width: 80vw;
   position: absolute;
-  top: -5vh;
-  right: 5vw; }
+  top: -10vh;
+  left: 10vw; }
   .video-2 video {
     width: 100%; }
 
 .tagsContainer2 {
   position: absolute;
-  left: 38vw;
-  top: 10vh; }
+  left: 30vw;
+  top: 17vh; }
 
 .projectParagraph2 {
   font-family: "Lato", sans-serif;
   font-weight: 300;
-  font-size: 1.2vw;
+  font-size: 3vw;
   color: #394047;
-  width: 40vw;
+  width: 70vw;
   position: absolute;
+  top: 22vh;
   left: 15vw;
-  top: 20vh;
-  line-height: 5vh; }
+  line-height: 3vh; }
 
 .linkContainer-2 {
-  width: 15vw;
+  width: 30vw;
   height: 6vh;
   position: absolute;
-  top: 40vh;
-  right: 15vw;
+  top: 35vh;
+  left: 60vw;
   display: flex;
-  justify-content: space-around; }
+  justify-content: space-between; }
 
 .linkTag-2 {
   font-family: "Bitter", serif;
   color: #394047;
-  font-size: 2vw;
+  font-size: 4vw;
   text-decoration: none;
-  width: 20vw; }
+  width: 20vw;
+  margin-top: 1.5vh; }
 
 .linkTag-2:hover {
   color: #D0A233; }
 
 .linkImage-2 {
-  width: 5vw; }
+  width: 10vw; }
   .linkImage-2 img {
     width: 100%; }
 
@@ -423,14 +359,22 @@ a {
   height: 100vh;
   position: relative; }
   .project-3 .projectTitle {
-    width: 50vw;
+    width: 100vw;
     font-family: "Abril Fatface", regular;
-    font-size: 5vw;
+    font-size: 10vw;
     color: #D0A233;
     position: absolute;
-    top: -17vh;
-    left: 45vw;
+    top: 42vh;
+    left: 5vw;
     text-shadow: 0 3px 8px #394047; }
+  .project-3 .linkContainer {
+    width: 80vw;
+    position: absolute;
+    top: 33vh;
+    left: 30vw; }
+  .project-3 .linkTag {
+    width: 65vw;
+    margin-top: 1vh; }
 
 .rectangle-3 {
   width: 85vw;
@@ -441,24 +385,18 @@ a {
 
 .workflow {
   width: 100vw;
-  height: 100vh; }
+  height: 120vh;
+  margin-bottom: 10vh; }
 
 .workflowSections {
-  transform: translateY(10vh);
-  transition: transform 1s ease, opacity 1s ease;
-  opacity: 0;
   position: relative; }
-
-.visible .workflowSections {
-  transform: translateY(0);
-  opacity: 1; }
 
 .sectionTitle {
   width: 100%;
   text-align: center;
-  margin-top: 4vh; }
+  margin: 5vh 0; }
   .sectionTitle .sectionImage {
-    width: 5vw;
+    width: 8vw;
     text-align: center;
     animation-name: spinning;
     animation-duration: 6s;
@@ -475,116 +413,39 @@ a {
   .sectionTitle h3 {
     color: white;
     font-family: "Abril Fatface", regular;
-    font-size: 5vw;
+    font-size: 8vw;
     display: inline-block; }
-
-.subtitle {
-  font-family: "Lato", sans-serif;
-  font-style: italic;
-  color: #DCC7A9;
-  margin: 3vh 0 9vh 0;
-  text-align: center; }
-  .subtitle h5 {
-    font-size: 1.8vw; }
-  .subtitle .emoji {
-    font-style: normal;
-    width: 100px; }
 
 .phaseTitle {
   font-family: "Abril Fatface", regular;
   font-weight: 700;
   letter-spacing: 0.09vw;
   color: white;
-  font-size: 1.5vw; }
+  font-size: 5vw; }
 
 .phaseParagraph {
   font-family: "Lato", sans-serif;
-  font-weight: lighter;
+  font-weight: 300;
   color: #DCC7A9;
-  font-size: 1vw;
+  font-size: 3.5vw;
   margin-top: 2vh;
-  line-height: 3vh; }
+  line-height: 3.5vh; }
+  .phaseParagraph .bold {
+    font-weight: 400;
+    color: #D0A233; }
 
 .row img {
   width: 100%; }
 
-.phase-1 {
-  position: absolute;
-  top: 5vh;
-  left: 0; }
-
 .number {
-  font-size: 3.5vw;
-  color: rgba(208, 162, 51, 0.7);
-  z-index: -100;
-  position: absolute;
-  top: -2.7vh;
-  left: -0.7vw; }
-
-.path-1 {
-  width: 10vw;
-  position: absolute;
-  top: 10vh;
-  left: 13vw;
-  transform: rotate(0); }
-
-.visible .path-1 {
-  transform: rotate(30deg); }
-
-.path-2 {
-  width: 10vw;
-  position: absolute;
-  top: 40vh;
-  left: 35vw;
-  transform: rotate(0); }
-
-.visible .path-2 {
-  transform: rotate(10deg); }
-
-.path-3 {
-  width: 10vw;
-  position: absolute;
-  top: 25vh;
-  left: 57vw;
-  transform: rotate(0); }
-
-.visible .path-3 {
-  transform: rotate(20deg); }
-
-.paths {
-  opacity: 0;
-  transition: opacity 1s ease, transform 1s ease; }
-
-.visible .paths {
-  opacity: 1; }
-  .visible .paths img {
+  text-shadow: -2vw -1vh rgba(208, 162, 51, 0.7); }
+  .number img {
     width: 100%; }
 
-.phase-2 {
-  position: absolute;
-  top: 35vh;
-  left: 15vw; }
+.path {
+  width: 3vw;
+  margin: 0 auto; }
 
-.phase-3 {
-  position: absolute;
-  top: 20vh;
-  left: 40vw; }
-
-.phase-4 {
-  position: absolute;
-  top: 50vh;
-  left: 60vw; }
-
-@media (max-width: 400px) {
-  .subtitle {
-    margin: 0; }
-
-  .phaseTitle {
-    font-size: 2.5vw; }
-
-  .phaseParagraph {
-    margin-top: 2vh;
-    font-size: 2vw; } }
 .about {
   width: 100vw;
   height: 100vh; }
@@ -593,7 +454,6 @@ a {
   height: 45vh; }
 
 .bioImage {
-  opacity: 0;
   transform: translateX(-5vw);
   transition: transform 1s ease, opacity 1s ease; }
   .bioImage img {
@@ -607,28 +467,18 @@ a {
     transform: translateZ(80px) scale(1);
     transform-style: preserve-3d; }
 
-.visible .bioImage {
-  transform: translateX(0);
-  opacity: 1; }
-
 .bioText {
-  width: 35vw;
+  width: 90vw;
   font-family: "Lato", sans-serif;
-  font-size: 1vw;
+  font-weight: 400;
+  font-size: 3vw;
   color: white;
-  line-height: 3vh;
-  opacity: 0;
-  transform: translateX(5vw);
-  transition: transform 1s ease, opacity 1s ease; }
+  line-height: 2.5vh; }
   .bioText p {
     margin-bottom: 1.5vh; }
   .bioText .emoji {
-    font-size: 1.7vw;
+    font-size: 5vw;
     margin-left: 0.3vw; }
-
-.visible .bioText {
-  transform: translateX(0);
-  opacity: 1; }
 
 .bold {
   font-weight: bold;
@@ -637,23 +487,21 @@ a {
 .highlight {
   color: #D0A233;
   font-weight: bold;
-  font-size: 1.3vw;
-  margin: 2vh 0; }
+  font-size: 5vw;
+  margin: 2vh 0;
+  width: 90vw; }
 
 .contactContainer {
-  display: flex;
-  width: 25vw;
-  justify-content: space-around;
   margin: 5vh auto; }
 
 .contact {
   margin: 0 auto;
   padding-top: 3.5vh;
-  width: 20vw; }
+  width: 70vw; }
 
 .contactMe {
   font-family: "Lato", sans-serif;
-  font-size: 1vw;
+  font-size: 3vw;
   color: white;
   text-align: center;
   letter-spacing: 0.1vw; }
@@ -666,22 +514,21 @@ a {
   width: 60vw;
   margin: 3vh auto; }
 
-.animojiContainer img {
-  width: 110px; }
+.animojiContainer {
+  text-align: center; }
+  .animojiContainer img {
+    width: 110px; }
 
 .logo-item {
-  width: 2vw; }
+  width: 5vw; }
   .logo-item img {
     width: 100%; }
 
 .copyright {
   font-family: "Lato", sans-serif;
-  font-size: 0.7vw;
+  font-size: 2vw;
   color: rgba(176, 188, 196, 0.6);
   text-align: center;
   margin-top: 5vh; }
 
-::-webkit-scrollbar {
-  display: none; }
-
-/*# sourceMappingURL=main.css.map */
+/*# sourceMappingURL=main_mobile.css.map */
