--- a/public/style/main_mobile.css
+++ b/public/style/main_mobile.css
@@ -4,6 +4,100 @@ body {
 a {
   text-decoration: none; }
 
+.scrollTarget {
+  overflow: hidden; }
+
+#hamburger-toggle, label[for="hamburger-toggle"] {
+  display: none; }
+
+label[for="hamburger-toggle"] {
+  display: block;
+  width: 40px;
+  height: 40px;
+  border-radius: 58px;
+  position: fixed;
+  top: 10px;
+  right: 10px;
+  z-index: 10001;
+  -webkit-user-select: none;
+  user-select: none; }
+
+.row a {
+  color: #D0A233;
+  letter-spacing: 0.84px;
+  list-style: none;
+  display: inline-block;
+  font-family: "Lato", sans-serif;
+  text-decoration: none;
+  font-size: 1.7em;
+  margin-bottom: 2.5vh; }
+  .row a:hover {
+    color: white; }
+
+.hamburger-icon {
+  display: block;
+  background: white;
+  border-radius: 2px;
+  width: 32px;
+  height: 3px;
+  position: relative;
+  top: calc(50% - 2px);
+  left: calc(50% - 18px); }
+  .hamburger-icon:before {
+    display: block;
+    content: " ";
+    background-color: inherit;
+    width: 100%;
+    height: 3px;
+    transform: translateY(-10px); }
+  .hamburger-icon:after {
+    display: block;
+    content: " ";
+    background-color: inherit;
+    width: 100%;
+    height: 3px;
+    transform: translateY(7px); }
+
+.container-menu {
+  position: fixed;
+  top: -100vh;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background-color: #394047;
+  opacity: 0.9;
+  z-index: 10000;
+  transition: top 0.5s ease; }
+  .container-menu a {
+    border-bottom: 2vh; }
+
+.menu-item {
+  margin: 10px 0;
+  transform: translateX(0);
+  transition: transform 0.5s ease; }
+
+#hamburger-toggle:checked + .container-menu {
+  top: 0; }
+  #hamburger-toggle:checked + .container-menu .row .menu-item.column, #hamburger-toggle:checked + .container-menu .row .menu-item.columns {
+    transform: translateX(100vW); }
+
+.container-menu .row {
+  text-align: center;
+  position: absolute;
+  width: 100%;
+  top: 50%;
+  transform: translateY(-50%); }
+  .container-menu .row .menu-item.column:nth-child(1), .container-menu .row .menu-item.columns:nth-child(1) {
+    transition-delay: 0s; }
+  .container-menu .row .menu-item.column:nth-child(2), .container-menu .row .menu-item.columns:nth-child(2) {
+    transition-delay: 0.1s; }
+  .container-menu .row .menu-item.column:nth-child(3), .container-menu .row .menu-item.columns:nth-child(3) {
+    transition-delay: 0.2s; }
+  .container-menu .row .menu-item.column:nth-child(4), .container-menu .row .menu-item.columns:nth-child(4) {
+    transition-delay: 0.3s; }
+  .container-menu .row .menu-item.column:nth-child(4), .container-menu .row .menu-item.columns:nth-child(5) {
+    transition-delay: 0.4s; }
+
 .introduction {
   width: 100vw;
   height: 100vh;
@@ -164,9 +258,6 @@ a {
   .scrollAction .scrollImage {
     width: 3vw; }
 
-.projects {
-  max-height: 300vh; }
-
 .sectionTitleProjects {
   width: 100%;
   text-align: center;
@@ -187,7 +278,7 @@ a {
   .sectionTitleProjects h3 {
     color: white;
     font-family: "Abril Fatface", regular;
-    font-size: 10vw;
+    font-size: 3em;
     display: inline-block;
     margin-top: 3vh; }
 
@@ -202,7 +293,7 @@ a {
 
 .rectangle-1 {
   width: 90vw;
-  height: 45vh;
+  height: 60vh;
   background-color: rgba(176, 188, 196, 0.6);
   margin: 0 auto; }
 
@@ -220,26 +311,26 @@ a {
   font-size: 13vw;
   color: #D0A233;
   position: absolute;
-  top: 41vh;
+  top: 55vh;
   left: 15vw;
   text-shadow: 0 3px 8px #394047; }
 
 .tagsContainer {
   position: absolute;
   top: 15vh;
-  left: 20vw;
+  left: 15vw;
   display: flex; }
 
 .tag {
   display: inline-block;
-  width: 20vw;
+  width: 25vw;
   height: 2vh;
   background-color: #394047;
   color: white;
   font-family: "Bitter", serif;
-  font-size: 2.5vw;
+  font-size: 0.7em;
   text-align: center;
-  padding-top: 0.5vh;
+  padding: 0.3em 0 0.3em 0;
   border-radius: 1vw;
   opacity: 0.7;
   margin-right: 1vw; }
@@ -247,20 +338,20 @@ a {
 .projectParagraph {
   font-family: "Lato", sans-serif;
   font-weight: 300;
-  font-size: 3vw;
+  font-size: 1.1em;
   color: white;
   width: 70vw;
   position: absolute;
   top: 20vh;
-  left: 20vw;
-  line-height: 3vh; }
+  left: 15vw;
+  line-height: 1.5em; }
 
 .linkContainer {
   width: 30vw;
   height: 6vh;
   position: absolute;
-  top: 32vh;
-  left: 60vw;
+  top: 45vh;
+  left: 35vw;
   display: flex;
   justify-content: space-between; }
 
@@ -290,7 +381,7 @@ a {
     font-size: 13vw;
     color: white;
     position: absolute;
-    top: 41vh;
+    top: 55vh;
     left: 10vw;
     text-shadow: 0 3px 8px #394047; }
 
@@ -302,7 +393,7 @@ a {
 .rectangle-2 {
   background-color: #DCC7A9;
   width: 90vw;
-  height: 45vh;
+  height: 60vh;
   margin: 0 auto; }
 
 .video-2 {
@@ -321,20 +412,20 @@ a {
 .projectParagraph2 {
   font-family: "Lato", sans-serif;
   font-weight: 300;
-  font-size: 3vw;
+  font-size: 1.1em;
   color: #394047;
-  width: 70vw;
+  width: 80vw;
   position: absolute;
-  top: 22vh;
+  top: 20vh;
   left: 15vw;
-  line-height: 3vh; }
+  line-height: 1.5em; }
 
 .linkContainer-2 {
   width: 30vw;
   height: 6vh;
   position: absolute;
-  top: 35vh;
-  left: 60vw;
+  top: 45vh;
+  left: 35vw;
   display: flex;
   justify-content: space-between; }
 
@@ -364,13 +455,13 @@ a {
     font-size: 10vw;
     color: #D0A233;
     position: absolute;
-    top: 42vh;
-    left: 5vw;
+    top: 55vh;
+    left: 10vw;
     text-shadow: 0 3px 8px #394047; }
   .project-3 .linkContainer {
     width: 80vw;
     position: absolute;
-    top: 33vh;
+    top: 45vh;
     left: 30vw; }
   .project-3 .linkTag {
     width: 65vw;
@@ -385,7 +476,7 @@ a {
 
 .workflow {
   width: 100vw;
-  height: 120vh;
+  height: 160vh;
   margin-bottom: 10vh; }
 
 .workflowSections {
@@ -421,15 +512,15 @@ a {
   font-weight: 700;
   letter-spacing: 0.09vw;
   color: white;
-  font-size: 5vw; }
+  font-size: 1.4em; }
 
 .phaseParagraph {
   font-family: "Lato", sans-serif;
   font-weight: 300;
   color: #DCC7A9;
-  font-size: 3.5vw;
-  margin-top: 2vh;
-  line-height: 3.5vh; }
+  font-size: 1.2em;
+  margin: 2vh 0 7vh 0;
+  line-height: 1.5em; }
   .phaseParagraph .bold {
     font-weight: 400;
     color: #D0A233; }
@@ -438,17 +529,20 @@ a {
   width: 100%; }
 
 .number {
-  text-shadow: -2vw -1vh rgba(208, 162, 51, 0.7); }
+  font-size: 2em;
+  color: rgba(208, 162, 51, 0.7);
+  z-index: -1000;
+  position: absolute;
+  transform: translate(-0.25em, -0.5em); }
   .number img {
     width: 100%; }
 
-.path {
-  width: 3vw;
-  margin: 0 auto; }
-
 .about {
   width: 100vw;
-  height: 100vh; }
+  height: 200vh;
+  margin-top: 10vh; }
+  .about .sectionTitle h3 {
+    font-size: 3.2em; }
 
 .bioSection {
   height: 45vh; }
@@ -471,9 +565,9 @@ a {
   width: 90vw;
   font-family: "Lato", sans-serif;
   font-weight: 400;
-  font-size: 3vw;
+  font-size: 1em;
   color: white;
-  line-height: 2.5vh; }
+  line-height: 1.7em; }
   .bioText p {
     margin-bottom: 1.5vh; }
   .bioText .emoji {
@@ -487,7 +581,8 @@ a {
 .highlight {
   color: #D0A233;
   font-weight: bold;
-  font-size: 5vw;
+  font-size: 1.7em;
+  line-height: 1.8em;
   margin: 2vh 0;
   width: 90vw; }
 
@@ -511,7 +606,7 @@ a {
 .logos {
   display: flex;
   justify-content: space-around;
-  width: 60vw;
+  width: 80vw;
   margin: 3vh auto; }
 
 .animojiContainer {
@@ -520,7 +615,7 @@ a {
     width: 110px; }
 
 .logo-item {
-  width: 5vw; }
+  width: 7vw; }
   .logo-item img {
     width: 100%; }
 
