--- a/public/style/main_mobile.sass
+++ b/public/style/main_mobile.sass
@@ -12,9 +12,9 @@ $lato: 'Lato', sans-serif
 
 
 $rectangleWidth: 90vw
-$rectangleHeight: 45vh
+$rectangleHeight: 60vh
 $videoSize: 80vw
-$sectionTitle: 10vw
+$sectionTitle: 3em
 
 
 body
@@ -22,8 +22,112 @@ body
 
 
 
+
 a
   text-decoration: none
+
+.scrollTarget
+  overflow: hidden
+
+
+
+
+// HAMBURGER MENU
+
+#hamburger-toggle, label[for="hamburger-toggle"]
+  display: none
+
+label[for="hamburger-toggle"]
+  display: block
+  width: 40px
+  height: 40px
+  border-radius: 58px
+  position: fixed
+  top: 10px
+  right: 10px
+  z-index: 10001
+  -webkit-user-select: none
+  user-select: none
+
+.row a
+  color: $mustard
+  letter-spacing: 0.84px
+  list-style: none
+  display: inline-block
+  font-family: $lato
+  text-decoration: none
+  font-size: 1.7em
+  margin-bottom: 2.5vh
+  &:hover
+    color: white
+
+.hamburger-icon
+  display: block
+  background: white
+  border-radius: 2px
+  width: 32px
+  height: 3px
+  position: relative
+  top: calc(50% - 2px)
+  left: calc(50% - 18px)
+  &:before
+    display: block
+    content: ' '
+    background-color: inherit
+    width: 100%
+    height: 3px
+    transform: translateY(-10px)
+  &:after
+    display: block
+    content: ' '
+    background-color: inherit
+    width: 100%
+    height: 3px
+    transform: translateY(7px)
+
+.container-menu
+  position: fixed
+  top: -100vh
+  left: 0
+  width: 100vw
+  height: 100vh
+  background-color: $brey
+  opacity: 0.9
+  z-index: 10000
+  transition: top 0.5s ease
+  a
+    border-bottom: 2vh
+
+.menu-item
+  margin: 10px 0
+  transform: translateX(0)
+  transition: transform 0.5s ease
+
+#hamburger-toggle:checked + .container-menu
+  top: 0
+  .row .menu-item
+    &.column, &.columns
+      transform: translateX(100vW)
+
+.container-menu .row
+
+  .menu-item
+    &.column:nth-child(1), &.columns:nth-child(1)
+      transition-delay: 0s
+    &.column:nth-child(2), &.columns:nth-child(2)
+      transition-delay: 0.1s
+    &.column:nth-child(3), &.columns:nth-child(3)
+      transition-delay: 0.2s
+    &.column:nth-child(4), &.columns:nth-child(4)
+      transition-delay: 0.3s
+    &.column:nth-child(4), &.columns:nth-child(5)
+      transition-delay: 0.4s
+  text-align: center
+  position: absolute
+  width: 100%
+  top: 50%
+  transform: translateY(-50%)
+
 
 // INTRODUCTION
 
@@ -209,8 +313,6 @@ a
 
 // PROJECTS
 
-.projects
-  max-height: 300vh
 
 .sectionTitleProjects
   width: 100%
@@ -296,7 +398,7 @@ a
   font-size: 13vw
   color: $mustard
   position: absolute
-  top: 41vh
+  top: 55vh
   left: 15vw
   text-shadow: 0 3px 8px $brey
 
@@ -304,19 +406,19 @@ a
 .tagsContainer
   position: absolute
   top: 15vh
-  left: 20vw
+  left: 15vw
   display: flex
 
 .tag
   display: inline-block
-  width: 20vw
+  width: 25vw
   height: 2vh
   background-color: $brey
   color: white
   font-family: $bitter
-  font-size: 2.5vw
+  font-size: 0.7em
   text-align: center
-  padding-top: 0.5vh
+  padding: 0.3em 0 0.3em 0
   border-radius: 1vw
   opacity: $tagOpacity
   margin-right: 1vw
@@ -324,20 +426,20 @@ a
 .projectParagraph
   font-family: $lato
   font-weight: 300
-  font-size: 3vw
+  font-size: 1.1em
   color: white
   width: 70vw
   position: absolute
   top: 20vh
-  left: 20vw
-  line-height: 3vh
+  left: 15vw
+  line-height: 1.5em
 
 .linkContainer
   width: 30vw
   height: 6vh
   position: absolute
-  top: 32vh
-  left: 60vw
+  top: 45vh
+  left: 35vw
   display: flex
   justify-content: space-between
 
@@ -375,7 +477,7 @@ a
     font-size: 13vw
     color: white
     position: absolute
-    top: 41vh
+    top: 55vh
     left: 10vw
     text-shadow: 0 3px 8px $brey
 
@@ -412,20 +514,20 @@ a
 .projectParagraph2
   font-family: $lato
   font-weight: 300
-  font-size: 3vw
+  font-size: 1.1em
   color: $brey
-  width: 70vw
+  width: 80vw
   position: absolute
-  top: 22vh
+  top: 20vh
   left: 15vw
-  line-height: 3vh
+  line-height: 1.5em
 
 .linkContainer-2
   width: 30vw
   height: 6vh
   position: absolute
-  top: 35vh
-  left: 60vw
+  top: 45vh
+  left: 35vw
   display: flex
   justify-content: space-between
 
@@ -464,14 +566,14 @@ a
     font-size: 10vw
     color: $mustard
     position: absolute
-    top: 42vh
-    left: 5vw
+    top: 55vh
+    left: 10vw
     text-shadow: 0 3px 8px $brey
 
   .linkContainer
     width: 80vw
     position: absolute
-    top: 33vh
+    top: 45vh
     left: 30vw
 
 
@@ -492,7 +594,7 @@ a
 
 .workflow
   width: 100vw
-  height: 120vh
+  height: 160vh
   margin-bottom: 10vh
 
 .workflowSections
@@ -535,7 +637,7 @@ a
   font-weight: 700
   letter-spacing: 0.09vw
   color: white
-  font-size: 5vw
+  font-size: 1.4em
 
 
 
@@ -543,9 +645,9 @@ a
   font-family: $lato
   font-weight: 300
   color: $ivory
-  font-size: 3.5vw
-  margin-top: 2vh
-  line-height: 3.5vh
+  font-size: 1.2em
+  margin: 2vh 0 7vh 0
+  line-height: 1.5em
 
   .bold
     font-weight: 400
@@ -556,10 +658,11 @@ a
   width: 100%
 
 .number
-  text-shadow: -2vw -1vh transparentize($mustard, 0.3)
-
-
-
+  font-size: 2em
+  color: transparentize($mustard, 0.3)
+  z-index: -1000
+  position: absolute
+  transform: translate(-0.25em, -0.5em)
 
 
 
@@ -567,19 +670,21 @@ a
     width: 100%
 
 
-.path
-  width: 3vw
-  margin: 0 auto
-
 // ABOUT
 
 .about
   width: 100vw
-  height: 100vh
+  height: 200vh
+  margin-top: 10vh
+
+  .sectionTitle
+    h3
+      font-size: 3.2em
 
 
 .bioSection
   height: 45vh
+
 
 
 .bioImage
@@ -604,9 +709,9 @@ a
   width: 90vw
   font-family: $lato
   font-weight: 400
-  font-size: 3vw
+  font-size: 1em
   color: white
-  line-height: 2.5vh
+  line-height: 1.7em
 
   p
     margin-bottom: 1.5vh
@@ -623,7 +728,8 @@ a
 .highlight
   color: $mustard
   font-weight: bold
-  font-size: 5vw
+  font-size: 1.7em
+  line-height: 1.8em
   margin: 2vh 0
   width: 90vw
 
@@ -648,15 +754,17 @@ a
   letter-spacing: 0.1vw
 
 
+
   .highlight
     text-transform: uppercase
+
 
 
 
 .logos
   display: flex
   justify-content: space-around
-  width: 60vw
+  width: 80vw
   margin: 3vh auto
 
 .animojiContainer
@@ -666,7 +774,7 @@ a
     width: 110px
 
 .logo-item
-  width: 5vw
+  width: 7vw
 
   img
     width: 100%
