--- a/public/style/main.css
+++ b/public/style/main.css
@@ -33,7 +33,7 @@ a {
   font-weight: 500;
   color: #D0A233;
   transform: translateX(40px);
-  transition: all 0.4s ease;
+  transition: all .4s ease;
   width: 140px;
   top: -9px;
   text-align: right; }
@@ -44,8 +44,9 @@ a {
 .scrollTarget {
   --currentSection: 0;
   margin-top: calc(-100vh * var(--currentSection));
-  transition: margin-top 0.7s ease;
-  overflow: hidden; }
+  transition: all .7s ease;
+  overflow: hidden;
+  opacity: 1; }
 
 .introduction {
   width: 100vw;
@@ -65,11 +66,11 @@ a {
 
 .typewriter {
   overflow: hidden;
-  border-right: 0.15rem solid transparent;
+  border-right: .15rem solid transparent;
   padding-right: 4px;
   white-space: nowrap;
   margin: 0 auto;
-  letter-spacing: 0.15rem;
+  letter-spacing: .15rem;
   animation: typing 2.5s steps(30, end), blink-caret 1s step-end 3; }
 
 @keyframes typing {
@@ -77,15 +78,18 @@ a {
     width: 0; }
   to {
     width: 100%; } }
+
 @keyframes blink-caret {
   from, to {
     border-color: transparent; }
   50% {
     border-color: white; } }
+
 @keyframes professionAppear {
   from {
     opacity: 0;
     transform: translateY(200px); } }
+
 .profession {
   font-family: "Abril Fatface", regular;
   color: #D0A233;
@@ -207,7 +211,31 @@ a {
     display: inline-block;
     color: white; }
   .scrollAction .scrollImage {
-    width: 1vw; }
+    width: 1vw;
+    -webkit-animation: wobble-hor-bottom 6s infinite;
+    animation: wobble-hor-bottom 6s infinite; }
+
+@-webkit-keyframes wobble-hor-bottom {
+  0%,
+  100% {
+    -webkit-transform: translateX(0%);
+    transform: translateX(0%);
+    -webkit-transform-origin: 50% 50%;
+    transform-origin: 50% 50%; }
+  15% {
+    -webkit-transform: translateX(-30px) rotate(-6deg);
+    transform: translateX(-10px) rotate(-6deg); }
+  30% {
+    -webkit-transform: translateX(15px) rotate(6deg);
+    transform: translateX(5px) rotate(6deg); }
+  45% {
+    -webkit-transform: translateX(-15px) rotate(-3.6deg);
+    transform: translateX(-5px) rotate(-3.6deg); }
+  60% {
+    -webkit-transform: translateX(0%);
+    transform: translateX(0%);
+    -webkit-transform-origin: 50% 50%;
+    transform-origin: 50% 50%; } }
 
 .projects {
   max-height: 300vh; }
@@ -220,6 +248,7 @@ a {
     width: 5vw;
     text-align: center;
     animation: rotate-scale-up-diag-1 6s ease infinite; }
+
 @keyframes rotate-scale-up-diag-1 {
   0% {
     transform: scale(1) rotate3d(1, 1, 0, 0deg); }
@@ -258,7 +287,6 @@ a {
   background-color: rgba(176, 188, 196, 0.6);
   position: absolute;
   top: -10vh;
-  opacity: 0;
   transition: opacity 1s ease; }
 
 .visible .rectangle-1 {
@@ -468,6 +496,7 @@ a {
     animation-delay: 0s;
     animation-iteration-count: infinite;
     animation-timing-function: ease; }
+
 @keyframes spinning {
   0% {
     transform: rotate(0deg); }
@@ -559,21 +588,13 @@ a {
 
 .paths {
   opacity: 0;
-  transition: opacity 1s ease, transform 1s ease; }
+  transition: opacity 2s ease, transform 2s ease; }
   .paths img {
     width: 100%; }
 
 .visible .paths {
-  opacity: 1;
-  stroke-dasharray: 1000;
-  stroke-dashoffset: 1000;
-  animation: dash 5s linear alternate infinite; }
+  opacity: 1; }
 
-@keyframes dash {
-  from {
-    stroke-dashoffset: 1000; }
-  to {
-    stroke-dashoffset: 0; } }
 .phase-2 {
   position: absolute;
   top: 35vh;
@@ -592,13 +613,12 @@ a {
 @media (max-width: 400px) {
   .subtitle {
     margin: 0; }
-
   .phaseTitle {
     font-size: 2.5vw; }
-
   .phaseParagraph {
     margin-top: 2vh;
     font-size: 2vw; } }
+
 .about {
   width: 100vw;
   height: 100vh; }
@@ -698,5 +718,3 @@ a {
 
 ::-webkit-scrollbar {
   display: none; }
-
-/*# sourceMappingURL=main.css.map */
