video position fixed

--- a/public/style/main_mobile.sass
+++ b/public/style/main_mobile.sass
@@ -399,6 +399,7 @@ label[for="hamburger-toggle"]
   height: 100vh
   width: 100vw
   position: relative
+  margin-top: 20vh
 
 
 
@@ -413,7 +414,7 @@ label[for="hamburger-toggle"]
 .video
   width: $videoSize
   position: absolute
-  top: -10vh
+  top: -20vh
   left: 10vw
 
 
@@ -533,7 +534,7 @@ label[for="hamburger-toggle"]
 .video-2
   width: $videoSize
   position: absolute
-  top: -10vh
+  top: -20vh
   left: 10vw
 
   video
